force-app/main/default/objects/Product_Snapshot__c/Product_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Stores status of all products that are not Obsolete</description>
    <label>Product Snapshot</label>
    <nameField>
        <label>Product Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>