force-app/main/default/objects/Product_Snapshot__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>