force-app/main/default/objects/Product_Snapshot__c/fields/COGS_USD__c.field-meta.xml
<CustomField>
    <fullName>COGS_USD__c</fullName>
    <label>COGS USD</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>