force-app/main/default/objects/Product_Snapshot__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <length>30</length>
    <type>Text</type>
</CustomField>