force-app/main/default/objects/Product_Snapshot__c/fields/Product_Center__c.field-meta.xml
<CustomField>
    <fullName>Product_Center__c</fullName>
    <inlineHelpText>Information imported from analytic snapshot</inlineHelpText>
    <label>Product Center</label>
    <length>30</length>
    <type>Text</type>
</CustomField>