force-app/main/default/objects/Product_Snapshot__c/fields/Product_Status_Short__c.field-meta.xml
<CustomField>
    <fullName>Product_Status_Short__c</fullName>
    <description>extracts the number of the status. Can be used for reporting to see evolution of product status</description>
    <formula>value(left( Product_Status_2__c,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Status Short</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>