force-app/main/default/objects/Product_Snapshot__c/fields/Type_Number__c.field-meta.xml
<CustomField>
    <fullName>Type_Number__c</fullName>
    <label>Type Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>